microservices-platform-Aws/Istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: microservices-gateway
  namespace: microservices
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: microservices-tls
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 3000
        name: grafana
        protocol: HTTP
      hosts:
        - "grafana.local"
    - port:
        number: 9090
        name: prometheus
        protocol: HTTP
      hosts:
        - "prometheus.local"
